crates/agglayer-interop-grpc-types/src/compat/v1/snapshots/agglayer_interop_grpc_types__compat__v1__tests__bad_data_in_nested__display.snap
---
source: crates/agglayer-interop-grpc-types/src/compat/v1/tests.rs
expression: error
---
data.value: invalid value
